force-app/main/default/objects/Rental_Property__c/Rental_Property__c.object-meta.xml
<CustomObject>
    <label>Property</label>
    <nameField>
        <displayFormat>PROP-{00000}</displayFormat>
        <label>Property Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>