force-app/main/default/objects/Rental_Property__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordable Housing</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Bike Storage</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Daycare</fullName>
            </value>
            <value>
                <fullName>Dry Cleaning</fullName>
            </value>
            <value>
                <fullName>Fitness Center</fullName>
            </value>
            <value>
                <fullName>Full Kitchen</fullName>
            </value>
            <value>
                <fullName>Game Room</fullName>
            </value>
            <value>
                <fullName>High Ceilings</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>On-site Retail</fullName>
            </value>
            <value>
                <fullName>Package Lockers</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Party Room</fullName>
            </value>
            <value>
                <fullName>Pet Friendly</fullName>
            </value>
            <value>
                <fullName>Public Transportation</fullName>
            </value>
            <value>
                <fullName>Room Service</fullName>
            </value>
            <value>
                <fullName>Smoke-Free</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Storage Lockers</fullName>
            </value>
            <value>
                <fullName>Walk-in Closets</fullName>
            </value>
            <value>
                <fullName>Washer Dryer</fullName>
            </value>
            <value>
                <fullName>WiFi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>