force-app/main/default/objects/Rental_Property__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <formula>HYPERLINK(&quot;http://www.google.com/maps/search/?api=1&amp;query=&quot; + IF( Location__Latitude__s &lt; 1,&quot;0&quot; + TEXT ( Location__Latitude__s ), TEXT( Location__Latitude__s))+ &quot;,&quot; + IF(Location__Longitude__s &lt; 1, &quot;0&quot; + TEXT(Location__Longitude__s), TEXT (Location__Longitude__s)),&quot;Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map</label>
    <type>Text</type>
</CustomField>