force-app/main/default/objects/Rental_Property__c/fields/Offer_Count__c.field-meta.xml
<CustomField>
    <fullName>Offer_Count__c</fullName>
    <label>Offer Count</label>
    <summaryForeignKey>Property_Offers__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>