force-app/main/default/objects/Rental_Property__c/fields/One_Bedroom_Start_Price__c.field-meta.xml
<CustomField>
    <fullName>One_Bedroom_Start_Price__c</fullName>
    <label>One Bedroom Start Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>