force-app/main/default/objects/Rental_Property__c/fields/Studio_Start_Price__c.field-meta.xml
<CustomField>
    <fullName>Studio_Start_Price__c</fullName>
    <label>Studio Start Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>